Updating rock paper scissors

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                 <button class="scissors" value="scissors">Scissors</button>
             </div>
         </div>
+
+        <div class ="play-again fadeOut">
+            <button>Play again</button>
+        </div>
+
     </section>
 <script src="scripts.js">
 </script>
